Quorum/Library/Tests/Templating/Pass/GenericPass.quorum
class GenericPass<Type, Value> is GenericParentA<Type>, GenericParentB, GenericParentC<Value>
    action Test(GenericPass<integer, integer> value)

    end

    action Main
        output "passed"
    end
end