Quorum/Library/Tests/Templating/Fail/PassTextTakesInteger_3.quorum
class main
    action Main
        Test<integer> something
        something:doSomething("text")
    end
end